# risk-hub

./: .env.example  .env.prod  .env.prod.example  .gitignore  .markdownlint.json  .ship.conf  .windsurfrules  AGENT_HANDOVER.md  CHANGELOG.md  CORE_CONTEXT.md  DEPLOYMENT.md  DEPLOY_TRIGGER  Makefile  README.md  catalog-info.yaml  copy_migrations.sh  create_users.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  project-facts.md  pyproject.toml  reflex.yaml  requirements-dev.txt  requirements-test.txt  requirements.txt  risk-hub.schutztat.de.conf
.github/ISSUE_TEMPLATE/: agent-task.yml  bug_report.yml  feature_request.yml  task.yml  use_case.yml
.github/PULL_REQUEST_TEMPLATE/: agent-pr.md
.github/scripts/: bootstrap_labels.py  issue_triage_service.py  triage_issue.py
.github/workflows/: cd-staging.yml  ci.yml  deploy.yml  docker-build.yml  issue-triage.yml  receive-windsurf-rules.yml  ruff-format-fix.yml  run-command.yml  setup-staging.yml  update-project-facts.yml
.reflex/: baseline.json
.windsurf/: rules.md
.windsurf/rules/: component-pattern.md  django-conventions.md  docker-deployment.md  htmx-templates.md  platform-principles.md  project-facts.md  testing.md  url-routing.md
.windsurf/workflows/: adr-create.md  adr-review.md  adr.md  agent-session-start.md  agent-task.md  agentic-coding.md  backup.md  complete.md  create-pdf.md  deploy-check.md  deploy.md  governance-check.md  hotfix.md  htmx-view.md  knowledge-capture.md  new-django-app.md  new-github-project.md  onboard-repo-testing-addendum.md  onboard-repo.md  platform-audit.md  pr-review.md  pre-code.md  repo-health-check.md  run-tests.md  session-ende.md  ship.md  stack-upgrade.md  sync-repo.md  sync-repos.md  testing-conventions.md  testing-setup.md  workflow-index.md
concepts/: Schutzbar_SDS_Implementierungskonzept.md  Schutzbar_SDS_Optimiert.md  ex schutz.md
deployment/scripts/: deploy-remote.sh
docker/app/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  nginx-prod.conf  nginx-staging.conf  nginx.conf
docs/: .env.example  .gitignore  AGENT_HANDOVER.md  REFLEX-DOCS-UPDATE_REPORT.md  USER_GUIDE.md  risk-hub Enterprise SaaS Risikomanagement.md  risk-hub db_spec run_book.mb.txt  risk-hub platform  bfagent  concept.md  risk-hub sourcen.md  risk-hub-SAAS_KONZEPT.md  stripe-monetarisierung.md
docs/_archive/infra/: docker-compose.yml  pyproject.toml
docs/_archive/infra/infra/ansible/playbooks/: site.yml
docs/_archive/infra/infra/ansible/roles/docker/tasks/: main.yml
docs/_archive/infra/infra/terraform/: outputs.tf
docs/adr/: ADR-001-explosionsschutz-modul-v2-review.md  ADR-001-explosionsschutz-modul-v2.md  ADR-001-explosionsschutz-modul-v4.md  ADR-001-explosionsschutz-modul-v5.md:Zone.Identifier  ADR-001-explosionsschutz-modul-v5.mdZone.Identifier  ADR-001-explosionsschutz-modul.md  ADR-002-substances-sds-modul.md  ADR-003-tenant-rbac-architektur.md  ADR-004-api-versionierung.md  ADR-005-event-driven-architecture.md  ADR-006-audit-compliance.md  ADR-039-Review.md  (+13 more)
memory-bank/: active-issues.md  project-context.md  tech-stack.md
nginx/: add-dns.sh  bfagent.iil.pet.conf  bfagent.schutztat.de.conf  drifttales.app.conf  drifttales.com.conf  risk-hub.schutztat.de.conf  schutztat.de.conf  travel.schutztat.de.conf
reflex-audit/: REFLEX-AUDIT-EXPLOSIONSSCHUTZ.md  REFLEX-AUDIT-FULL-APP.md  REFLEX-AUDIT-RECHTE-ROLLEN.md
scripts/: apply_rls_policies.sql  backup.sh  check_template_blocks.sh  enable_rls.sql  enable_rls_explosionsschutz.sql  fix-password.sh  init_db.sql  risk-hub.iil.pet.conf  setup-prod-env.sh  setup-server.sh  ship.sh  staging-risk-hub.conf  update-nginx.sh
src/: conftest.py  dev_db.sqlite3  doc_template_retrievers.py  pytest.ini  test_substances.py
tests/: conftest.py
ui-manifests/: dsb_dashboard.yaml  dsb_vvt_list.yaml
(+920 files in other folders)
