[project]
name = "risk-hub"
version = "0.1.0"
description = "Enterprise SaaS Risikomanagement Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Achim Dehnert", email = "achim@dehnert.com"}
]

dependencies = [
    "Django>=5.0,<6.0",
    "dj-database-url>=2.2",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "django-htmx>=1.17",
    "django-ninja>=1.1.0",
    "djangorestframework>=3.15",
    "django-filter>=24.0",
    "pydantic>=2.7",
    "boto3>=1.34",
    "httpx>=0.27",
    "structlog>=24.0",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "tenacity>=8.2",
    "weasyprint>=62.0",
    "python-docx>=1.1",
    "celery[redis]>=5.4",
    "platform-context @ git+https://github.com/achimdehnert/platform.git#subdirectory=packages/platform-context",
    "django-tenancy @ git+https://github.com/achimdehnert/platform.git#subdirectory=packages/django-tenancy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
]
prod = [
    "gunicorn>=22.0",
    "whitenoise>=6.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
asyncio_mode = "auto"
testpaths = ["src", "tests"]
markers = [
    "e2e: Playwright end-to-end tests (require --playwright flag)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
