[project]
name = "risk-hub"
version = "0.1.0"
description = "Enterprise SaaS Platform für EHS/Risikomanagement"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "BFAgent GmbH" }]

dependencies = [
    # Django Core
    "Django>=5.0,<6.0",
    "django-htmx>=1.17",
    "django-extensions>=3.2",
    
    # Database
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.2",
    
    # API (für spätere Hub-Integration)
    "django-ninja>=1.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    
    # Background Tasks
    "celery>=5.4",
    "redis>=5.0",
    
    # Documents / S3
    "boto3>=1.34",
    
    # Reporting
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "WeasyPrint>=62.0",
    
    # Utils
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    "faker>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "pre-commit>=3.7",
    "ipython>=8.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "apps"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["celery.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "-ra",
    "-q",
]
testpaths = ["tests"]
